bygging av javaScript og hono

--- a/Portfolio1/Application/index.html
+++ b/Portfolio1/Application/index.html
@@ -12,7 +12,7 @@
     </header>
 
     <main class="content-grid">
-        <section class="projects-list">
+        <section class="projects-list" id="project-list">
             <ul>
                 <li>
                     <article class="project-card">
@@ -34,7 +34,7 @@
         <section class="new-project">
             <article class="project-card project-start">
                 <h2 class="card-title" style="background-color: #d15843;">Start et nytt prosjekt</h2>
-                <form action="">
+                <form id="submitForm">
                     <label for="project-name">Prosjekt navn</label>
                     <input type="text" id="project-name" name="project-name">
                     
@@ -52,5 +52,6 @@
             </article>
         </section>
     </main>
+    <script type="module" src="/main.js"></script>
 </body>
 </html>
